# jelly-dict

./: .gitignore  Quick Start.command  README.md  Run jelly dict.command
app_files/jelly_dict/: .gitignore  README.md  pyproject.toml  requirements-tts.txt  requirements.txt
app_files/jelly_dict/app/: main.py
app_files/jelly_dict/app/anki/: apkg_exporter.py  render.py  tsv_exporter.py
app_files/jelly_dict/app/core/: config.py  duplicate_checker.py  language_detector.py  models.py
app_files/jelly_dict/app/dictionary/: manual_provider.py  naver_crawler.py  parser_utils.py  playwright_client.py
app_files/jelly_dict/app/ocr/: __init__.py  apple_vision.py  base.py  google_vision.py  providers.py  temp_files.py
app_files/jelly_dict/app/services/: anki_sync_service.py  export_service.py  save_service.py
app_files/jelly_dict/app/storage/: secret_store.py  settings_store.py
app_files/jelly_dict/app/ui/: developer_tools_dialog.py  duplicate_dialog.py  entry_detail_dialog.py  export_worker.py  main_window.py  ocr_worker.py  settings_view.py  tts_install_worker.py  word_input_view.py  word_list_view.py
app_files/jelly_dict/scripts/: dump_entry.py
app_files/jelly_dict/tests/: conftest.py  test_anki_render.py  test_ankiconnect_client.py  test_duplicate_checker.py  test_excel_writer.py  test_export_service.py  test_lookup_service.py  test_models.py  test_naver_japanese_parser.py  test_no_network_imports.py  test_ocr.py  test_secret_store.py  test_tts_pipeline.py
app_files/jelly_dict/tests/fixtures/: naver_en_apple.html  naver_en_recalibration.html
(+68 files in other folders)
